# polkit_example

./: Cargo.toml  README.md  meson.build
.github/workflows/: ci.yaml
misc/: polkit-waycrate-agent.service.in
src/: agent.rs  main.rs
