[package]
name = "polkit-waycrate"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced", features = [
	"image",
	"canvas",
	"advanced",
	"smol",
] }
iced_runtime = { git = "https://github.com/iced-rs/iced" }
iced_layershell = { git = "https://github.com/waycrate/exwlshelleventloop", package = "iced_layershell" }
