[package]
name = "polkit-waycrate-authentication-agent-1"
version = "0.1.1"
edition = "2024"
license = "GPL-3.0-or-later"
description = "polkit-agent binding for zbus"
authors = ["Decodertalkers <aakari@tutanota.com>"]
repository = "https://github.com/Decodetalkers/polkit_example"

[dependencies]
iced = { version = "0.14.0", features = [
	"image",
	"canvas",
	"advanced",
	"smol",
	"svg",
] }
iced_runtime = "0.14.0"
iced_layershell = "0.18.0"
futures = "0.3.31"

nix = { version = "0.31.2", features = ["process", "user"] }
zbus-polkit-agent = "0.4.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = [
	"std",
	"env-filter",
	"fmt",
	"local-time",
] }
xdg = "3.0.0"
